--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.1.8",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
     "node-sass": "^6.0.1",
@@ -21,7 +22,7 @@
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "sass-resources-loader": "^2.2.4",
