--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-vant": "^0.3.4",
     "redux": "^4.1.1",
     "sass-resources-loader": "^2.2.4",
     "typescript": "^4.1.2",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "ts-import-plugin": "^1.6.7",
     "typescript-plugin-css-modules": "^3.4.0"
   }
 }
