--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "babel-plugin-import": "^1.13.3",
+    "classnames": "^2.3.1",
     "customize-cra": "^1.0.0",
     "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
