--- a/package.json
+++ b/package.json
@@ -15,20 +15,15 @@
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.3",
-    "babel-plugin-import": "^1.13.3",
     "classnames": "^2.3.1",
-    "customize-cra": "^1.0.0",
-    "mockjs": "^1.1.0",
-    "node-sass": "^6.0.1",
-    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
-    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
-    "react-vant": "^0.3.4",
+    "react-vant": "^0.5.6",
     "redux": "^4.1.1",
+    "node-sass": "^6.0.1",
     "sass-resources-loader": "^2.2.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -58,9 +53,11 @@
     ]
   },
   "devDependencies": {
+    "customize-cra": "^1.0.0",
+    "mockjs": "^1.1.0",
     "postcss": "^8.3.6",
     "postcss-pxtorem": "^5.1.1",
-    "ts-import-plugin": "^1.6.7",
-    "typescript-plugin-css-modules": "^3.4.0"
+    "react-app-rewired": "^2.1.8",
+    "babel-plugin-import": "^1.13.3"
   }
 }
