--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     ]
   },
   "devDependencies": {
+    "less": "^4.1.1",
+    "less-loader": "^7.3.0",
     "postcss": "^8.3.6",
     "postcss-pxtorem": "^5.1.1",
     "ts-import-plugin": "^1.6.7",
