--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
     "@types/customize-cra": "^1.0.2",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-scroll": "^1.8.3",
     "axios": "^0.21.3",
     "classnames": "^2.3.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-vant": "^0.5.6",
     "redux": "^4.1.1",
-    "node-sass": "^6.0.1",
     "sass-resources-loader": "^2.2.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -53,13 +55,13 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
-    "mockjs": "^1.1.0",
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
+    "mockjs": "^1.1.0",
     "postcss": "^8.3.6",
     "postcss-pxtorem": "^5.1.1",
-    "react-app-rewired": "^2.1.8",
-    "babel-plugin-import": "^1.13.3"
+    "react-app-rewired": "^2.1.8"
   }
 }
