--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-trip",
+  "homepage": "https://trip.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,6 +18,7 @@
     "@types/react-scroll": "^1.8.3",
     "axios": "^0.21.3",
     "classnames": "^2.3.1",
+    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -34,6 +36,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
