--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-trip",
-  "homepage": "https://trip.github.io",
+  "homepage": "https://wangbaoqi.github.io/trip-site",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -34,7 +34,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "cross-env REACT_APP_ENV=production BUNDLE_VISUALIZE=1 react-app-rewired build",
     "test": "react-app-rewired test",
     "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d build",
@@ -60,12 +60,14 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.13.3",
+    "cross-env": "^7.0.3",
     "customize-cra": "^1.0.0",
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
     "mockjs": "^1.1.0",
     "postcss": "^8.3.6",
     "postcss-pxtorem": "^5.1.1",
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.1.8",
+    "webpack-bundle-analyzer": "^4.4.2"
   }
 }
