--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-scroll": "^1.8.3",
     "axios": "^0.21.3",
     "classnames": "^2.3.1",
+    "dayjs": "^1.10.7",
     "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
